# Motors

./: .buildinfo  .gitignore  .gitmodules  brushed.html  course.yml  course_outline.html  genindex.html  getting_started.html  hugo.toml  index.html  justfile  motors.html  objects.inv  power.html  programs.html  pyproject.toml  search.html  searchindex.js  servos.html  setup_microbit.html  signals.html  steppers.html
.course/: overview.md  spec.md
.course/outlines/: motors-clinic.md
.course/research/: 001-existing-sphinx-course-analysis.md  002-external-resources-and-standards-researc.md
.github/workflows/: deploy-pages.yml  publish-docs.yaml
_old/docs/: Makefile
_sources/: brushed.md.txt  course_outline.md.txt  index.md.txt  motors.md.txt  power.md.txt  servos.md.txt  setup_microbit.md.txt  signals.md.txt  steppers.md.txt
assets/css/: nav-override.css
content/: _index.md  programs.md
content/01-getting-started/: 01-kit-contents.md  02-microbit-setup.md  _index.md
content/02-signals-and-power/: 01-voltage-and-pwm.md  02-oscilloscope.md  _index.md
content/03-brushed-motors/: 01-h-bridge-wiring.md  02-speed-and-direction.md  _index.md
content/04-hobby-servos/: 01-servo-wiring.md  02-sweep-programs.md  _index.md
content/05-steppers/: 01-stepper-wiring.md  02-coil-sequencing.md  _index.md
content/06-wrap-up/: 01-motor-comparison.md  _index.md
docs/: Makefile  README.md
docs/source/: brushed.md  conf.py  course_outline.md  getting_started.md  index.md  motors.md  programs.md  servos.md  signals.md  (+2 more)
public/: index.html  index.xml  sitemap.xml
(+37 files in other folders)
