[project]
name = "motors"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "furo>=2025.9.25",
    "ghp-import>=2.1.0",
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-design>=0.6.1",
    "sphinx-togglebutton>=0.3.2",
]
